--- a/css/elegant.html
+++ b/css/elegant.html
@@ -12,7 +12,7 @@
       #main {
         height: 600px;
         width: 100%;
-        /*background-image: url(bg1.jpeg);*/
+        /*background-image: url(../img/bg1.jpeg);*/
         background-size: cover;
         position: relative;
         top: 50px;
@@ -25,7 +25,7 @@
         top: 150px;
         left: 10px;
         box-shadow: 0px 0px 20px;
-        background-image: url(bg1.jpeg);
+        background-image: url(../img/bg1.jpeg);
         background-size: 1150px 650px;
         background-position: -10px -150px;
         z-index: 1;
@@ -38,7 +38,7 @@
         top: 100px;
         left: 100px;
         box-shadow: 0px 0px 20px;
-        background-image: url(bg1.jpeg);
+        background-image: url(../img/bg1.jpeg);
         background-size: 1150px 650px;
         background-position: -100px -100px;
         z-index: 2;
@@ -51,7 +51,7 @@
         top: 50px;
         left: 150px;
         box-shadow: 0px 0px 20px;
-        background-image: url(bg1.jpeg);
+        background-image: url(../img/bg1.jpeg);
         background-size: 1150px 650px;
         background-position: -150px -50px;
         z-index: 3;
@@ -64,7 +64,7 @@
         top: 25px;
         left: 300px;
         box-shadow: 0px 0px 20px;
-        background-image: url(bg1.jpeg);
+        background-image: url(../img/bg1.jpeg);
         background-size: 1150px 650px;
         background-position: -300px -25px;
         z-index: 4;
@@ -77,7 +77,7 @@
         top: 50px;
         left: 498px;
         box-shadow: 0px 0px 20px;
-        background-image: url(bg1.jpeg);
+        background-image: url(../img/bg1.jpeg);
         background-size: 1150px 650px;
         background-position: -498px -50px;
         z-index: 3;
@@ -90,7 +90,7 @@
         top: 100px;
         left: 647px;
         box-shadow: 0px 0px 20px;
-        background-image: url(bg1.jpeg);
+        background-image: url(../img/bg1.jpeg);
         background-size: 1150px 650px;
         background-position: -647px -100px;
         z-index: 2;
@@ -103,7 +103,7 @@
         top: 150px;
         left: 745px;
         box-shadow: 0px 0px 20px;
-        background-image: url(bg1.jpeg);
+        background-image: url(../img/bg1.jpeg);
         background-size: 1150px 650px;
         background-position: -745px -150px;
         z-index: 1;
